fix: Fixed typo and corrected name

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,12 @@
 # Discord bot token from discord developer portal
 DISCORD_BOT_TOKEN=""
-# Starhgate Auth token generated for StarGate API(https://stargate.io/docs/stargate/1.0/developers-guide/auth.html)
+
+# Stargate Auth token generated for Stargate API
+# NOTE- This needs to be generated using the Cassandra db username and password. 
+# Ref: (https://stargate.io/docs/stargate/1.0/developers-guide/auth.html)
 STARGATE_AUTH_TOKEN=""
 
-# The following can be removed, after the AUTH token for StarGate has been generated.
+# The following can be removed, after the AUTH token for Stargate has been generated.
 # Cassandra username for generating Auth Token
 CASSANDRA_USER=""
 # Cassandra Password for generating Auth Token
