--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "prebuild": "rm -rf ./prod",
     "build": "tsc",
+    "lint": "eslint src",
     "start": "node ./prod/index.js",
     "test": "echo 'No tests yet.'"
   },
