--- a/.github/workflows/labels.yml
+++ b/.github/workflows/labels.yml
@@ -2,7 +2,9 @@ name: Import labels
 on:
   push:
     branches:
-      - main
+      - eddiejaoude-issue-56
+    paths:
+      - 'docs/labels.json'
 
 jobs:
   labels:
