feat: establish initial bot
Sets up the initial bot infrastructure. Includes a basic help and
ping command for testing purposes. Builds out the interfaces needed
to allow additional commands.

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 # Discord bot token from discord developer portal
 DISCORD_BOT_TOKEN=""
 
+# Prefix to use for the
+PREFIX="!stargate"
+
 # Stargate Auth token generated for Stargate API
 # NOTE- This needs to be generated using the Cassandra db username and password. 
 # Ref: (https://stargate.io/docs/stargate/1.0/developers-guide/auth.html)
