--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "lint": "eslint src",
     "prebuild": "rm -rf ./prod",
-    "prepare": "husky install",
+    "prepare": "if test \"$HUSKY\" != \"0\" ; then husky install ; fi",
     "start": "node ./prod/index.js",
     "test": "echo 'No tests yet.'"
   },
