--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -33,6 +33,11 @@ jobs:
         with:
           name: artifacts
           path: dist
+      - name: npm install and test
+        run: |
+          npm install
+          npm test
+
   push_to_registry:
     name: Push Docker image to GitHub Packages
     needs: test
