--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -15,6 +15,8 @@ jobs:
 
       - name: install ruby
         uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 2.6
 
       - run: |
           gem install asciidoctor
