--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -47,6 +47,9 @@ jobs:
         uses: actions/checkout@v2
       - name: set up Docker builder
         uses: docker/setup-buildx-action@v1
+      - name: get-npm-version
+        id: package-version
+        uses: martinbeentjes/npm-get-version-action@master
       - name: log into GitHub Container Registry
         uses: docker/login-action@v1
         with:
@@ -59,5 +62,5 @@ jobs:
           context: .
           push: true
           tags: |
-            ghcr.io/eddiejaoude/stargate:v0.1.${{ github.run_number }}
+            ghcr.io/eddiejaoude/stargate:v${{ steps.package-version.outputs.current-version}}
             ghcr.io/eddiejaoude/stargate:latest
