feat: version command (#88)

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ DISCORD_BOT_TOKEN=""
 PREFIX="!stargate"
 
 # Stargate Auth token generated for Stargate API
-# NOTE- This needs to be generated using the Cassandra db username and password. 
+# NOTE- This needs to be generated using the Cassandra db username and password.
 # Ref: (https://stargate.io/docs/stargate/1.0/developers-guide/auth.html)
 STARGATE_AUTH_TOKEN=""
 
@@ -14,3 +14,6 @@ STARGATE_AUTH_TOKEN=""
 CASSANDRA_USER=""
 # Cassandra Password for generating Auth Token
 CASSANDRA_PASS=""
+
+# deployed version
+VERSION=0.0.0
