--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "start": "npm run build && node -r dotenv/config ./dist/index.js",
     "start:prod": "node ./dist/index.js",
     "docs": "asciidoctor -D build/ docs/index.adoc",
-    "test": "echo 'No tests yet.'",
-    "version": "echo $npm_package_version"
+    "test": "echo 'No tests yet.'"
   },
   "repository": {
     "type": "git",
