--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -49,9 +49,9 @@ jobs:
         uses: docker/setup-buildx-action@v1
       - name: get-npm-version
         id: package-version
-      - name: version dockerfile
-        run: sed -i 's/v0.0.0/v${{ steps.package-version.outputs.current-version}}/g' Dockerfile
         uses: martinbeentjes/npm-get-version-action@master
+      - name: version dockerfile
+        run: sed -i 's/v0.0.0/v${{ steps.package-version.outputs.current-version}}/g' ../../Dockerfile
       - name: log into GitHub Container Registry
         uses: docker/login-action@v1
         with:
