--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -51,7 +51,7 @@ jobs:
         id: package-version
         uses: martinbeentjes/npm-get-version-action@master
       - name: version dockerfile
-        run: sed -i 's/v0.0.0/v${{ steps.package-version.outputs.current-version}}/g' ../../Dockerfile
+        run: sed -i 's/v0.0.0/v${{ steps.package-version.outputs.current-version}}/g' Dockerfile
       - name: log into GitHub Container Registry
         uses: docker/login-action@v1
         with:
