--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,8 +1,8 @@
 name: Docs
 on:
   push:
-    branches:
-      - main
+    paths:
+      - 'docs/'
 
 jobs:
   docs:
@@ -25,6 +25,7 @@ jobs:
         run: npm run docs
 
       - name: deploy
+        if: github.ref == 'refs/heads/main'
         uses: JamesIves/github-pages-deploy-action@4.1.0
         with:
           branch: gh-pages
