--- a/.github/workflows/labels.yml
+++ b/.github/workflows/labels.yml
@@ -1,31 +1,20 @@
-name: Import labels
+name: Import open source standard labels
+
 on:
   push:
-    paths:
-      - 'docs/labels.json'
+    branches: [ main ]
 
 jobs:
   labels:
+
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [14.x]
-
     steps:
-      - name: checkout source files
-        uses: actions/checkout@v2
-
-      - name: use node.js v${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-
-      - name: install deps
-        run: npm ci
-
-      - name: import labels
-        if: github.ref == 'refs/heads/main'
-        run: |
-          npx ghlbl -o eddiejaoude -r stargate -t ${{ secrets.GITHUB_TOKEN }} -d
-          npx ghlbl -o eddiejaoude -r stargate -t ${{ secrets.GITHUB_TOKEN }} -i docs/labels.json
+    - uses: actions/setup-node@v2
+      with:
+        node-version: '14'
+    - uses: EddieHubCommunity/gh-action-open-source-labels@v0.1.0
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        owner-name: ${{ github.repository_owner }}
+        repository-name: ${{ github.event.repository.name }}
