--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -1,4 +1,4 @@
-name: Changelog
+name: Releases
 on:
   push:
     branches:
@@ -11,14 +11,13 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Conventional Changelog Action
+      - name: conventional Changelog Action
         id: changelog
-        uses: TriPSs/conventional-changelog-action@v3
+        uses: TriPSs/conventional-changelog-action@v3.7.1
         with:
           github-token: ${{ secrets.CHANGELOG_RELEASE }}
-          output-file: "false"
 
-      - name: Create Release
+      - name: create release
         uses: actions/create-release@v1
         if: ${{ steps.changelog.outputs.skipped == 'false' }}
         env:
